[package]
name = "folder_icon"
version = "2025.9.1"
edition = "2024"

# override package level optimization, to always be maximum
[profile.release.package."*"]
opt-level = 3

[profile.release]
opt-level = "z"   # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"

[dependencies]
gettext-rs = { version = "0.7.2", features = ["gettext-system"] }
image = "0.25.8"
gio = "0.21.2"
librsvg = "2.61.1"
cairo-rs = "0.21.2"
resvg = "0.45.1"
usvg = "0.45.1"
log = "0.4.28"
pretty_env_logger = "0.5"
rand = "0.9.2"
fs_extra = "1.2.0"
hex = "0.4.3"
thiserror = "2.0.16"
gdk4 = "0.10.1"
gsk4 = "0.10.1"
xmp_toolkit = "1.11.0"
serde_json = "1.0.145"
serde = { version = "1.0.226", features = ["serde_derive"] }
random_str = "0.1.2"


[dependencies.gtk]
package = "gtk4"
version = "0.10.1"
features = ["v4_18"]

[dependencies.adw]
package = "libadwaita"
version = "0.8.0"
features = ["v1_8"]
