[package]
name = "Iconic"
version = "2026.6.1"
edition = "2024"

# override package level optimization, to always be maximum
[profile.release.package."*"]
opt-level = "z"
codegen-units = 1
strip = "symbols"

[profile.release]
opt-level = "z"   # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"

[dependencies]
gettext-rs = { version = "0.7.7", features = ["gettext-system"] }
image = "0.25.10"
gio = "0.22.6"
librsvg = "2.62.3"
cairo-rs = "0.22.0"
resvg = "0.47.0"
usvg = "0.47.0"
log = "0.4.32"
pretty_env_logger = "0.5"
rand = "0.10.1"
hex = "0.4.3"
thiserror = "2.0.18"
gdk4 = "0.11.2"
gsk4 = "0.11.1"
xmp_toolkit = "1.12.1"
serde_json = "1.0.150"
serde = { version = "1.0.228", features = ["serde_derive"] }
async-channel = "2.5.0"
strum = { version = "0.28.0", features = ["derive"] }
uuid = { version = "1.23.3", features = ["v7"] }


[dependencies.gtk]
package = "gtk4"
version = "0.11.3"
features = ["v4_22"]

[dependencies.adw]
package = "libadwaita"
version = "0.9.1"
features = ["v1_9"]
